# corkscrew

./: Cargo.toml  README.md  corkscrew.yml  failing.yml  foo.yml  hosts.yml  ideas.md  requests.yml
.github/workflows/: general.yml
src/: build.rs  builder.rs  cli.rs  config.rs  corkscrew.rs  error.rs  exec.rs  executor.rs  hosts.rs  lib.rs  load.rs  old_requests.rs  parse.rs  parser.rs  request.rs  requests.rs  settings.rs  test.yml
src/core/: builder.rs  executor.rs  mod.rs  parser.rs  printer.rs  run.rs  settings.rs
src/types/: auth.rs  cli.rs  detail.rs  method.rs  mod.rs  output.rs  request.rs  request_data.rs
tests/: builder.rs  e2e-config.yml  executor.rs  integration.rs  minimal-config.yml  parser.rs  run.rs  settings.rs
