[package]
name = "corkscrew"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.192", features = ["derive"] }
serde_yaml = "0.9.27"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.34.0", features = ["full"] }
serde_json = "1.0.108"
clap = { version = "4.4.8", features = ["derive"] }
cli-table = "0.4"
serde_urlencoded = "0.7.1"
http = "1.0.0"

[dev-dependencies]
pretty_assertions = "1.4.0"
actix-web = "4.4.1"
serial_test = "2.0.0"

